trunk/Archive2/61/a2fc306f45f52d/output
+ clang++ -std=c++1y -Wall -pedantic main.cpp
main.cpp:8:10: error: invalid operands to binary expression ('auto' and 'int')
    x[0] + 42;
    ~~~~ ^ ~~
1 error generated.
